// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeMirror renders with defaults 1`] = `
<Field
  component={[Function]}
  label="Field Label"
  name="fieldName"
  type="json"
/>
`;

exports[`CodeMirror renders with source 1`] = `
<Field
  component={[Function]}
  label="Field Label"
  name="sourceObject.fieldName"
  source="sourceObject"
  type="json"
/>
`;
